# Aero-Bound-Ventures-Public

./: .gitignore
.github/workflows/: terraform.yml
backend/: .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml
backend/alembic/: env.py
backend/crud/: users.py
backend/external_services/: cache.py  email.py  flight.py
backend/models/: bookings.py  users.py
backend/routers/: flights.py  payments.py  users.py
backend/schemas/: auth.py  flight_order.py  flight_search.py  flights.py  locations.py  payments.py
backend/tests/: test_bookings.py
backend/utils/: helpers.py  log_manager.py  security.py
frontend/: README.md  package-lock.json  package.json  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/auth/: page.tsx
frontend/src/app/flights/: page.tsx
frontend/src/app/my/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/components/: BookingForm.tsx  ContactUsSection.tsx  FlightOfferCard.tsx  Footer.tsx  HeroSection.tsx  HowItWorksSection.tsx  LoginModal.tsx  Navbar.tsx  PopularDestinationsSection.tsx  SignupModal.tsx  TestimonialsSection.tsx  TicketProcessingStatus.tsx  UserAccount.tsx
frontend/src/data/: countryCodes.json
frontend/src/store/: auth.ts  flights.js
frontend/src/types/: flight-booking.ts  flight_offer.tsx
frontend/src/utils/: auth.ts
mobile/: README.md
shared/: README.md
terraform/: .terraform.lock.hcl  aws_bucket_creation.sh  main.tf  outputs.tf  setup.sh  terraform.tf  variables.tf
(+10 files in other folders)
